Fixed about me vertical overflow for mobile

--- a/src/css/MobileAbout.css
+++ b/src/css/MobileAbout.css
@@ -1,7 +1,8 @@
 .mobileAboutComponent {
-  height: 80%;
-  width: 100vw;
   background: var(--background-color);
+
+  height: 100%;
+  width: 100vw;
   font-family: "Poppins", sans-serif;
 }
 
@@ -11,7 +12,7 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -65%);
+  transform: translate(-50%, -50%);
   height: auto;
   width: 50%;
 
